<!--
  ~ Copyright (C) 2018 Oleg Kan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Challenge</string>

    <string name="action_delete">Delete</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_female">Female</string>
    <string name="action_filter_male">Male</string>
    <string name="action_filter_show_all">Show All</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_default">Id (asc)</string>
    <string name="action_sort_by_age_asc">Age (asc)</string>
    <string name="action_sort_by_age_desc">Age (desc)</string>
    <string name="action_sort_by_name_asc">Name (asc)</string>
    <string name="action_sort_by_name_desc">Name (desc)</string>

    <string name="activity_details">Profile</string>
    <string name="activity_overview">Profiles</string>

    <string name="profile_age">Age</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_hobbies">Hobbies</string>
    <string name="profile_name">Name</string>

    <string name="please_wait">Please wait…</string>
    <string name="profile_list_empty_message">Saved profiles will show up here</string>

    <string name="error_unknown">Unknown error</string>
    <string name="validation_error_profile_age">Age should be in range 14 : 125</string>
    <string name="validation_error_profile_gender">Please select gender</string>
    <string name="validation_error_profile_name">Name cannot be empty</string>

</resources>
