<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Oleg Kan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_sort_by_id_asc"
        android:orderInCategory="100"
        android:title="@string/action_sort_default"
        />

    <item
        android:id="@+id/action_sort_by_age_asc"
        android:orderInCategory="200"
        android:title="@string/action_sort_by_age_asc"
        />

    <item
        android:id="@+id/action_sort_by_age_desc"
        android:orderInCategory="300"
        android:title="@string/action_sort_by_age_desc"
        />

    <item
        android:id="@+id/action_sort_by_name_asc"
        android:orderInCategory="400"
        android:title="@string/action_sort_by_name_asc"
        />

    <item
        android:id="@+id/action_sort_by_name_desc"
        android:orderInCategory="500"
        android:title="@string/action_sort_by_name_desc"
        />

</menu>
